<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Base Currency"
                android:id="@+id/textView2"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:textColor="@android:color/black"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/settings_currency"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:textSize="15dp"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Currency which calculations will be displayed in"
                android:id="@+id/textView3"
                android:paddingLeft="4dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textSize="13sp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_spinner"
                android:layout_weight="1"
                android:paddingRight="8dp"
                android:theme="@style/SpinnerStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/line_divider"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Update"
            android:id="@+id/textView4"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Update conversion rates on startup"
                android:id="@+id/textView5"
                android:paddingLeft="4dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textSize="13dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch1"
                android:paddingRight="8dp"
                android:checked="true"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
